# asciigraph-rs

./: CHANGELOG.md  Cargo.toml  FEATURES.md  LICENSE  README.md  rustfmt.toml
examples/: auto_tick_count.rs  axis_labels.rs  colored_graph.rs  custom_chars.rs  heart.rs  legends.rs  moving_average.rs  rainbow.rs  serde_config.rs  stat_annotations.rs  threshold.rs  zero_line.rs
src/: asciigraph.rs  clear_test.rs  color.rs  colors.rs  datagen.rs  legend.rs  lib.rs  main.rs  options.rs  utils.rs
src/asciigraph/: mod.rs
src/asciigraph/features/: mod.rs  stat_annotations.rs  threshold.rs  x_axis.rs  zero_line.rs
src/options/: config.rs  extensions.rs
tests/: asciigraph_test.rs
