[package]
name = "asciigraph-rs"
version = "0.1.1"
edition = "2024"
description = "Lightweight ASCII line graphs for the terminal"
license = "BSD-3-Clause"
authors = ["Nii Nue <niinue@gmail.com>"]
repository = "https://github.com/neneodonkor/asciigraph-rs"
readme = "README.md"
keywords = ["ascii", "graph", "plot", "terminal", "cli"]
categories = ["command-line-utilities", "visualization"]
exclude = [
    "tests/*",
    ".gitignore",
]

[lib]
name = "asciigraph"
path = "src/lib.rs"

[[bin]]
name = "asciigraph"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
